--- a/content/hf-nlp/tf-basic.ipynb
+++ b/content/hf-nlp/tf-basic.ipynb
@@ -6,7 +6,7 @@
         "id": "H8qIIGRW1N0m"
       },
       "source": [
-        "# Transformers, what can they do?"
+        "# Transformers (basic)"
       ]
     },
     {
